kubernetes/healthchecks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: healthchecks
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: healthchecks
      app.kubernetes.io/instance: healthchecks
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthchecks
        app.kubernetes.io/instance: healthchecks
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: healthchecks
        image: healthchecks/healthchecks:v4.4@sha256:aa08a61b0dcfd83f1332eab195d5cec1b595ae076eb8388cadf8a3d597114f9b
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        startupProbe:
          tcpSocket:
            port: http
          periodSeconds: 5
          failureThreshold: 30
        readinessProbe:
          tcpSocket:
            port: http
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: http
          periodSeconds: 10
          failureThreshold: 3
