kubernetes/healthchecks/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: healthchecks

spec:
  ports:
  - name: http
    port: 8000
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: healthchecks
    app.kubernetes.io/instance: healthchecks
